# sxjm-2025-school

./: data.xlsx  data_cleaned.csv  data_processed.csv  data_processed_female_std.csv  data_processed_male.csv  data_processed_male_std.csv  data_processed_std.csv  feature_mean_std.csv  main.py  pre_process.ipynb  pyproject.toml  ques2.ipynb  regression.ipynb  regression_all.ipynb  regression_beta.ipynb  regression_results.csv  regression_results_only2.csv  regression_xgb.ipynb  regression_xgb_permutation_significance.csv  sxjm-2025-school.7z  xgb_beta_model.pkl  探索性分析.ipynb
others/: q1.ipy
plots/: ols.ipynb
pre_process/: data.xlsx  data_cleaned.csv  data_processed_female.csv  data_processed_female_std.csv  data_processed_male.csv  data_processed_male_std.csv  feature_mean_std_female.csv  pre_process.ipynb  ~$data.xlsx
regression/: regression.ipynb  regression_all.ipynb  regression_beta.ipynb  regression_results.csv  regression_results_only2.csv  regression_super.ipynb  regression_xgb.ipynb  regression_xgb_permutation_significance.csv  regression_xgb_with_beta.ipynb
results/: problem1_coefficients.csv  problem1_correlations.csv  problem1_performance.csv  problem1_prediction_grid.csv
