[project]
name = "sxjm-2025-school"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "kneed>=0.8.5",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pygam>=0.10.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "statsmodels>=0.14.5",
    "xgboost>=2.1.4",
]
